app-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: app-a
